fixed .footer-gap a

--- a/style.css
+++ b/style.css
@@ -490,7 +490,6 @@ label {
   }
   .footer-gap a {
     color: white;
-    text-decoration: none;
   }
 }
 /* Footer styling end */ 
